# Logger

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  keywords.txt  library.json  library.properties
examples/Basic/: log.ino
examples/PC_Host/: LoggerSetup.hpp  main.cpp
examples/arduino/: LoggerSetup.hpp  log.ino
src/: Logger.hpp
test/: build.sh  test.cpp
